--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -23,5 +23,5 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Test with pytest
         run: |
-          pytest .test_find.py
-          pytest .test_select.py
+          pytest test_find.py
+          pytest test_select.py
