--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,16 @@ version: '3.8'
 services:
   web:
     build:
-      context: ./prod_dockerfile
-      dockerfile:  Dockerfile.prod
-    command:   gunicorn -w 4 api:app
+      dockerfile:  ./prod_dockerfile/web/Dockerfile.prod
+    command:   gunicorn -w 4 --bind 0.0.0.0:8000 api:app
     expose:
       - 8000
     ports:
       - "8000:8000"
   nginx:
-    build: ./robot_framework/nginx
+    build:
+      context: ./prod_dockerfile/nginx
+      dockerfile: Dockerfile
     ports:
     - "1337:80"
     depends_on:
