--- a/prod_dockerfile/web/Dockerfile.prod
+++ b/prod_dockerfile/web/Dockerfile.prod
@@ -2,7 +2,7 @@ FROM python:3.10.8
 
 WORKDIR /code
 
-COPY prod_dockerfile/web/requirements.txt .
+COPY ./prod_dockerfile/web/requirements.txt .
 
 RUN pip install -r ./requirements.txt
 
