--- a/web-deployment.yaml
+++ b/web-deployment.yaml
@@ -4,7 +4,6 @@ metadata:
   annotations:
     kompose.cmd: kompose convert
     kompose.version: 1.27.0 (b0ed6a2c9)
-  creationTimestamp: null
   labels:
     io.kompose.service: web
   name: web
@@ -19,7 +18,6 @@ spec:
       annotations:
         kompose.cmd: kompose convert
         kompose.version: 1.27.0 (b0ed6a2c9)
-      creationTimestamp: null
       labels:
         io.kompose.service: web
     spec:
@@ -31,7 +29,7 @@ spec:
             - --bind
             - 0.0.0.0:8000
             - api:app
-          image: web
+          image: ari1008/web-aristide:1.0
           name: web
           ports:
             - containerPort: 8000
