--- a/prod_dockerfile/web/Dockerfile.prod
+++ b/prod_dockerfile/web/Dockerfile.prod
@@ -9,3 +9,5 @@ RUN pip install -r ./requirements.txt
 COPY src/ .
 
 EXPOSE 8000
+
+CMD [ "gunicorn", "-w" ,"4" ,"--bind", "0.0.0.0:8000", "api:app" ]
