--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -13,7 +13,7 @@ jobs:
         with:
           python-version: '3.10.8' # Remplacez x par le numéro de la version de Python que vous utilisez
       - name: Install dependencies
-        run: pip install -r ./prod_dockerfile/web/requirements.txt
+        run: pip install -r  ./../../prod_dockerfile/web/requirements.txt
       - name: Run tests
         run: pytest
           
