--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [ "3.10"]
+        python-version: [ "3.10.8"]
 
     steps:
       - uses: actions/checkout@v3
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          if [ -f requirements.txt ]; echo "hello"; then pip install -r requirements.txt; fi
+          if [ -f ./prod_dockerfile/web/requirements.txt ];  then pip install -r ./prod_dockerfile/web/requirements.txt; fi
       #- name: Lint with flake8
         #run: |
         #  # stop the build if there are Python syntax errors or undefined names
