--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          if [ -f ./prod_dockerfile/web/requirements.txt ];  then pip install -r ./prod_dockerfile/web/requirements.txt; fi
+          if [ -f ./prod_dockerfile/web/requirements.txt ];  then echo "hello"; pip install -r ./prod_dockerfile/web/requirements.txt; fi
       #- name: Lint with flake8
         #run: |
         #  # stop the build if there are Python syntax errors or undefined names
