--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -3,39 +3,8 @@ name: PA_TDL_Test
 on: [push]
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "3.10.8"]
-
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest
-          echo "hello"
-          if [ -f ./prod_dockerfile/web/requirements.txt ];  then echo "hello2"; pip install -r ./prod_dockerfile/web/requirements.txt; fi
-
-          ls -al prod_dockerfile/web/
-          echo "hello"
-      #- name: Lint with flake8
-        #run: |
-        #  # stop the build if there are Python syntax errors or undefined names
-         # flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-         # flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
-        run: |
-          pytest
   docker:
-      needs: [build]
+      #needs: [build]
       runs-on: ubuntu-22.04
       
       steps:
