--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -14,8 +14,8 @@ jobs:
         - name: Login to Docker Hub
           uses: docker/login-action@v2.1.0
           with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
+            username: ari1008
+            password: dckr_pat_n-DRFcAA4X6aT8_slrCeD9jzBFg
             logout: true
 
         - name: Extract metadata (tags, labels) for Docker
