--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -11,24 +11,11 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3.1.0
           
+        - name: Afficher les détails du fichier PA_TDL_Test
+          run: ls -al PA_TDL_Test
+        
         - name: Login to Docker Hub
           uses: docker/login-action@v2.1.0
           with:
             username: ari1008
-            password: dckr_pat_n-DRFcAA4X6aT8_slrCeD9jzBFg
-            logout: true
-
-        - name: Extract metadata (tags, labels) for Docker
-          id: meta
-          uses: docker/metadata-action@v4.1.1
-          with:
-            images: ari1008/web-aristide
-        
-        
-        - name: Build and push Docker image
-          uses: docker/build-push-action@v3
-          with:
-            context:  .
-            push: true
-            tags: ari1008/web-aristide
-            
+            password: dckr_pat_n-DRFcAA4X6aT
