--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -20,18 +20,18 @@ jobs:
             logout: true
         
         - name: Afficher les détails du fichier PA_TDL_Test
-          run: |
-            if [ -f prod_dockerfile/web/DockerFile.prod ]; then echo "hello"; fi 
-            ls -al
+          run: if [ -f prod_dockerfile/web/DockerFile.prod ]; then echo "hello"; fi 
 
-        - name: Build Docker Compose
-          run: |
-            docker-compose build 
+        - name: Extract metadata (tags, labels) for Docker
+          id: meta
+          uses: docker/metadata-action@v4.1.1
+          with:
+            images: ari1008/web-aristide
         
         
         - name: Build and push Docker image
           uses: docker/build-push-action@v3
           with:
-            context:  DockerFile.prod
+            context:  prod_dockerfile/web/DockerFile.prod
             push: true
             tags: ari1008/web-aristide
