--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -12,8 +12,6 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v3.1.0
 
-        
-          
         - name: Login to Docker Hub
           uses: docker/login-action@v2.1.0
           with:
@@ -34,3 +32,22 @@ jobs:
             context:  .
             push: true
             tags: ari1008/web-aristide
+  deploy:
+    if: ${{github.event_name == 'push'}}
+    needs: [docker]
+    runs-on: ubuntu-22.04
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3.1.0
+
+      - name: Helm tool installer
+        uses: Azure/setup-helm@v3
+        with:
+          token: ${{ secrets.TOKEN_GITHUB }}
+            
+      - name: Create kubeconfig file
+        run: echo "${{ secrets.KUBECONFIG }}" > kubeconfig.yml
+
+      - name: Update Helm
+        run: helm upgrade --kubeconfig ./kubeconfig.yml my-chart ./chart/
