--- a/my-chart/templates/service.yaml
+++ b/my-chart/templates/service.yaml
@@ -1,15 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "my-chart.fullname" . }}
+  namespace: 4al1-groupe-2
+  annotations:
+    kompose.cmd: kompose convert
+    kompose.version: 1.27.0 (b0ed6a2c9)
   labels:
-    {{- include "my-chart.labels" . | nindent 4 }}
+    io.kompose.service: web
+  name: web
 spec:
-  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - name: "8000"
+      port: 8000
+      targetPort: 8000
   selector:
-    {{- include "my-chart.selectorLabels" . | nindent 4 }}
+    io.kompose.service: web
+status:
+  loadBalancer: {}
