--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -21,11 +21,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          echo "hello"
-          if [ -f ./prod_dockerfile/web/requirements.txt ];  then echo "hello2"; pip install -r ./prod_dockerfile/web/requirements.txt; fi
-
-          ls -al prod_dockerfile/web/
-          echo "hello"
+          if [ -f ./requirements.txt ];  then echo "hello2"; pip install -r ./requirements.txt; fi
       #- name: Lint with flake8
         #run: |
         #  # stop the build if there are Python syntax errors or undefined names
